--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,6 +22,10 @@
   position: relative;
 }
 
+.my_info {
+  text-align:right;
+}
+
 #contact {
   display: inline;
   float: left;
@@ -67,11 +71,6 @@ strong {
   color: white;
 }
 
-/*p.contact_text>span {
-    display: inline-block;
-    min-width: 95px;
-}*/
-
 p {
   color: #838383;
 }
@@ -82,22 +81,39 @@ p span {
 
 ul {
   list-style-type: none;
+  color: #838383;
 }
 
-#arrow1 {
+#arrow1big {
   display: inline-block;
   background-color: #44A5D2;
   padding: 20px 20px;
-  padding-top: 22px;
+  padding-top: 25px;
   border-radius: 5px;
 }
 
-#arrow2 {
+#arrow2big {
   display: inline-block;
   background-color: #69A333;
   padding: 20px 20px;
-  padding-top: 22px;
+  padding-top: 25px;
   border-radius: 5px;
+}
+
+#arrow1small {
+  display: inline-block;
+  background-color: #44A5D2;
+  padding: 10px 10px;
+  padding-top: 10px;
+  border-radius: 100px;
+}
+
+#arrow2small {
+  display: inline-block;
+  background-color: #69A333;
+  padding: 10px 10px;
+  padding-top: 10px;
+  border-radius: 100px;
 }
 
 .arrow_large {
@@ -125,17 +141,12 @@ ul {
 }
 
 #employement {
-  display: inline;
   float: left;
-  margin: 1rem;
-  position: relative;
 }
 
 #education {
-  display: inline;
   float: left;
-  margin-top: 1rem;
-  position: relative;
+  width: 100%;
 }
 
 .gray_background {
@@ -149,13 +160,198 @@ ul {
 #section2 {
   float: left;
   margin: 1rem;
+  width: 65%;
+  margin-bottom: 10rem;
+  margin-top: 4rem;
 }
 
 #section3 {
-  float: right;
+  float:right;
   margin: 1rem;
+  width: 30%;
+  margin-top: 4rem;
 }
 
 #category {
   padding: 1rem;
+}
+
+.company {
+  display: inline-block;
+  color: #F8FBF9;
+  margin-left: 1.5rem;
+}
+
+.year {
+  float: right;
+  color: #686868;
+}
+
+.role {
+  margin-left: 4rem;
+  margin-top: -30px;
+}
+
+h3 {
+  font-size: 1.3rem;
+}
+
+.duty {
+  color: #838383;
+  list-style-type:circle;
+  margin-left: -80px;
+  margin-top: -15px;
+}
+
+.duty li {
+  padding-top: 1rem;
+}
+
+.solid {
+  background-color: #373737;
+  height: 4px;
+  border-radius: 20px;
+  width: 95%;
+  border:none;
+}
+
+.dashed {
+  width: 95%;
+  border: 2px dashed #373737;
+}
+
+.skills {
+  margin-bottom: 6rem;
+}
+
+.skills h2 {
+  margin-bottom: 2rem; 
+}
+
+.skills h3 {
+  font-size: 1.2rem;
+  color: #82848D;
+}
+
+.content_box {
+  box-sizing: content-box
+}
+
+.border_box {
+  box-sizing: border-box;
+}
+
+.progress_box_outer {
+  width: 100%;
+  height: 1.5rem;
+  background: #3B3B3B;
+}
+
+.progress_box_inner {
+  height: 1.5rem;
+  background: yellow;
+  text-align: right;
+  font-weight: bold;
+  color: white;
+}
+
+.brown {
+  width: 92%;
+  background-color: #6A4622;
+}
+
+.light_blue {
+  width: 80%;
+  background-color: #44A5D1;
+}
+
+.green {
+  width: 75%;
+  background-color: #69A333;
+}
+
+.yellow {
+  width: 50%;
+  background-color: #CC971E;
+}
+
+.red {
+  width: 63%;
+  background-color: #CD2B0A
+}
+
+.purple {
+  width: 71%;
+  background-color: #B208FF;
+}
+
+.brown_bullet {
+  width: 1rem;
+  height: 1rem;
+  white-space: nowrap;
+  background-color: #6A4622;
+}
+
+.light_blue_bullet {
+  width: 1rem;
+  height: 1rem;
+  white-space: nowrap;
+  background-color: #44A5D1;
+}
+
+.green_bullet {
+  width: 1rem;
+  height: 1rem;
+  white-space: nowrap;
+  background-color: #69A333;
+}
+
+.yellow_bullet {
+  width: 1rem;
+  height: 1rem;
+  white-space: nowrap;
+  background-color: #CC971E;
+}
+
+.red_bullet {
+  width: 1rem;
+  height: 1rem;
+  white-space: nowrap;
+  background-color: #CD2B0A;
+}
+
+.purple_bullet {
+  width: 1rem;
+  height: 1rem;
+  white-space: nowrap;
+  background-color: #B208FF;
+}
+
+.g_skills {
+  padding-left: 2rem;
+}
+
+.circle {
+  height: 25px;
+  width: 25px;
+  background-color: #191919;
+  border-radius: 50%;
+  display: inline-block;
+  border: solid 0.3rem #363636;
+}
+
+.light_blue_circle {
+  background-color: #44A5D1;
+}
+
+.green_circle {
+  background-color: #69A333
+}
+
+.language p {
+  font-size: 1.4rem;
+  font-weight: bold;
+  color: #838383;
+  padding-right: 80px;
+  display: inline-block;
 }
